Document user endpoint. Fix some mistakes
