# handlers/v1/user/put.go
@@ -10,13 +10,26 @@ import (
 )
 
 type UpdateUserBody struct {
-	Name           *string
-	Surname        *string
-	Role           *string
-	ProfilePicture *string
-	IsActive       *bool
+	Name           *string	`json:"name" example:"Gonzalo"`
+	Surname        *string	`json:"surname" example:"Aguado Torres"`
+	Role           *string	`json:"role" example:"user"`
+	ProfilePicture *string	`json:"profilePicture" example:"https://picsum.photos/200/300"`
+	IsActive       *bool		`json:"isActive" example:"false"`
 }
 
+//	@Tags					User
+//  @Description	Update an user by id
+//	@Accept				json
+//	@Produce			json
+//  @Param				Authorization	header	string	true	"Access token with Bearer prefix"
+//	@Param				user_id				path		string	true	"User's id"
+//  @Param				Body					body		UpdateUserBody true "Fields to edit. Every field is optional. If the user is not an admin isActive and role are ignored"
+//  @Success			200	{object}	responses.CorrectResponse	"If the response is successful you will receive a simple code and message indicating that the user has been edited"
+//  @Failure			400	{object}	responses.FailureResponse	"If no token is provided the API will answer with a 400 code"
+//  @Failure			403	{object}	responses.FailureResponse "The API can answer with a 403 if the token is invalid/malformed. the user has not verified their email yet or (if the user is trying to edit other than self) the user is not an admin"
+//  @Failure			404	{object}	responses.FailureResponse	"If the user could not be found it will return a 404 code"
+//  @Failure			500	{object}	responses.FailureResponse	"If the user could not be edited it will return a 500 code. Please report this error if you encounter it in production"
+//  @Router 		/v1/user/{user_id} [put]
 func EditUser(ctx *fiber.Ctx) error {
 	editUser := new(UpdateUserBody)
 	err := ctx.BodyParser(editUser)
@@ -57,13 +70,13 @@ func EditUser(ctx *fiber.Ctx) error {
 	if editUser.Surname != nil {
 		userUrl.Surname = *editUser.Surname
 	}
-	if editUser.Role != nil {
+	if editUser.Role != nil && userLocal.Role == "admin" {
 		userUrl.Role = *editUser.Role
 	}
 	if editUser.ProfilePicture != nil {
 		userUrl.ProfilePicture = *editUser.ProfilePicture
 	}
-	if editUser.IsActive != nil {
+	if editUser.IsActive != nil && userLocal.Role == "admin" {
 		userUrl.IsActive = *editUser.IsActive
 	}
 
